logout section modified with bearerAuth
